--- a/app/src/main/res/layout/activity_adv.xml
+++ b/app/src/main/res/layout/activity_adv.xml
@@ -19,10 +19,45 @@
         android:layout_width="0dp"
         android:layout_height="0dp" >
 
-        <TextView
-            android:id="@+id/nextCardTextView"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            app:cardCornerRadius="15dp"
+            android:id="@+id/nextCardView">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/top_card_back">
+
+                <TextView
+                    android:id="@+id/nextCardTextView"
+                    android:layout_width="309dp"
+                    android:layout_height="118dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="22dp"
+                    android:layout_marginEnd="22dp"
+                    android:text="Description test"
+                    android:textColor="#040152"
+                    android:textSize="36sp" />
+
+                <TextView
+                    android:id="@+id/nextCardLengthView"
+                    android:layout_width="101dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/nextCardTextView"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="228dp"
+                    android:layout_marginTop="7dp"
+                    android:layout_marginEnd="22dp"
+                    android:text="228 m"
+                    android:textColor="#3A270A"
+                    android:textSize="18sp" />
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
     </FrameLayout>
 
     <FrameLayout
@@ -31,10 +66,45 @@
         android:layout_width="0dp"
         android:layout_height="0dp" >
 
-        <TextView
-            android:id="@+id/topCardTextView"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            app:cardCornerRadius="15dp"
+            android:id="@+id/topCardView">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/top_card_back">
+
+                <TextView
+                    android:id="@+id/topCardTextView"
+                    android:layout_width="309dp"
+                    android:layout_height="118dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="22dp"
+                    android:layout_marginEnd="22dp"
+                    android:text="Description test"
+                    android:textColor="#040152"
+                    android:textSize="36sp" />
+
+                <TextView
+                    android:id="@+id/topCardLengthView"
+                    android:layout_width="101dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/topCardTextView"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="228dp"
+                    android:layout_marginTop="7dp"
+                    android:layout_marginEnd="22dp"
+                    android:text="228 m"
+                    android:textColor="#3A270A"
+                    android:textSize="18sp" />
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
     </FrameLayout>
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
