--- a/app/src/main/res/layout/activity_adv.xml
+++ b/app/src/main/res/layout/activity_adv.xml
@@ -9,13 +9,13 @@
     app:layoutDescription="@xml/motion_scene"
     tools:showPath="true"
     app:motionDebug="SHOW_ALL"
+    android:background="@color/colorPrimary"
     tools:context=".AdvActivity">
 
 
 
     <FrameLayout
         android:id="@+id/nextCard"
-        android:background="@color/colorPrimary"
         android:layout_width="0dp"
         android:layout_height="0dp" >
 
@@ -24,57 +24,66 @@
             android:layout_height="match_parent"
             app:cardCornerRadius="15dp"
             android:id="@+id/nextCardView">
-            <RelativeLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/top_card_back">
 
                 <TextView
                     android:id="@+id/nextCardTextView"
-                    android:layout_width="309dp"
+                    android:layout_width="0dp"
                     android:layout_height="118dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="22dp"
-                    android:layout_marginEnd="22dp"
                     android:text="Description test"
                     android:textColor="#040152"
-                    android:textSize="36sp" />
+                    android:textSize="36sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/nextCardLengthView"
-                    android:layout_width="101dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/nextCardTextView"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginStart="228dp"
-                    android:layout_marginTop="7dp"
-                    android:layout_marginEnd="22dp"
                     android:text="228 m"
                     android:textColor="#3A270A"
-                    android:textSize="18sp" />
-            </RelativeLayout>
+                    android:textSize="18sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.76"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/nextCardTextView" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
     </FrameLayout>
 
     <FrameLayout
         android:id="@+id/topCard"
-        android:background="@color/colorAccent"
         android:layout_width="0dp"
-        android:layout_height="0dp" >
+        android:layout_height="0dp"
+        tools:layout_editor_absoluteX="30dp"
+        tools:layout_editor_absoluteY="30dp">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/topCardView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:cardCornerRadius="15dp"
-            android:id="@+id/topCardView">
+            app:cardCornerRadius="15dp">
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/top_card_back">
+
+                <TextView
+                    android:id="@+id/topCardLengthView"
+                    android:layout_width="101dp"
+                    android:layout_height="wrap_content"
+                    android:text="228 m"
+                    android:textColor="#3A270A"
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/topCardTextView"
@@ -90,19 +99,6 @@
                     android:textColor="#040152"
                     android:textSize="36sp" />
 
-                <TextView
-                    android:id="@+id/topCardLengthView"
-                    android:layout_width="101dp"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/topCardTextView"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginStart="228dp"
-                    android:layout_marginTop="7dp"
-                    android:layout_marginEnd="22dp"
-                    android:text="228 m"
-                    android:textColor="#3A270A"
-                    android:textSize="18sp" />
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
     </FrameLayout>
