--- a/app/src/main/res/layout/activity_adv.xml
+++ b/app/src/main/res/layout/activity_adv.xml
@@ -64,7 +64,7 @@
                 <ImageView
                     android:id="@+id/imageView2"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="317dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -131,7 +131,7 @@
                 <ImageView
                     android:id="@+id/imageView"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="317dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
